Update the false positive ones

--- a/data/2003.bib
+++ b/data/2003.bib
@@ -582,3 +582,21 @@ Author-Email={k.nikbin@imperial.ac.uk},
 Author-Name={K.M. Nikbin},
 Data={N/A}
 }
+
+@Article{CHEN2003221,
+  Title                    = {Foreign object damage in a thermal barrier system: mechanisms and simulations},
+  Author                   = {X Chen and R Wang and N Yao and A.G Evans and J.W Hutchinson and R.W Bruce},
+  Journal                  = {Materials Science and Engineering: A},
+  Year                     = {2003},
+  Number                   = {1},
+  Pages                    = {221 - 231},
+  Volume                   = {352},
+  Doi                      = {https://doi.org/10.1016/S0921-5093(02)00905-X},
+  ISSN                     = {0921-5093},
+  Keywords                 = {Thermal barrier coating, Foreign object damage, Mechanism, Simulation},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S092150930200905X},
+  Author-Email={chen@esag.harvard.edu},
+  Author-Name={X Chen},
+  Data={N/A}
+  
+}
