--- a/data/2010.bib
+++ b/data/2010.bib
@@ -732,3 +732,67 @@ DA = {{2017-08-29}},
 Author-Name={A. Simone},
 Data={N/A}
 }
+
+@article{ ISI:000282997700015,
+Author = {Moro, I. and Briottet, L. and Lemoine, P. and Andrieu, E. and Blanc, C.
+   and Odemer, G.},
+Title = {{Hydrogen embrittlement susceptibility of a high strength steel X80}},
+Journal = {{MATERIALS SCIENCE AND ENGINEERING A-STRUCTURAL MATERIALS PROPERTIES
+   MICROSTRUCTURE AND PROCESSING}},
+Year = {{2010}},
+Volume = {{527}},
+Number = {{27-28}},
+Pages = {{7252-7260}},
+Month = {{OCT 25}},
+Abstract = {{The present paper deals with hydrogen embrittlement (HE) susceptibility
+   of a high strength steel grade (X80). The respective implication of
+   different hydrogen populations, i.e. adsorbed, dissolved in interstitial
+   sites, trapped on dislocations and/or microstructural elements on the
+   associated embrittlement mechanisms has been addressed through
+   mechanical testing in high pressure of hydrogen gas at room temperature.
+   Tensile tests at various strain rates and hydrogen pressures have been
+   carried out. Moreover, changes of gas (hydrogen or nitrogen) during
+   loading have been imposed in order to get critical experiments able to
+   discriminate among the potential hydrogen embrittlement mechanisms
+   already proposed in the literature. The results of these tests have
+   shown that hydrogen induces several kind of damages including decohesion
+   along ferrite/pearlite interfaces and microcracks initiations on the
+   specimens external surface. It is shown that decohesion is not critical
+   under the loading paths used in the present study. On the contrary, it
+   appears that the external microcracks initiation, followed by a
+   quasi-cleavage fracture, is responsible for the premature failure of the
+   material in high pressure of hydrogen gas. These experimental results
+   have been further discussed by modeling hydrogen diffusion in order to
+   identify hydrogen populations (adsorbed, diffusible or trapped) involved
+   in HE. It was then demonstrated that adsorbed and near surface
+   diffusible hydrogen are mainly responsible for embrittlement. (C) 2010
+   Elsevier B.V. All rights reserved.}},
+Publisher = {{ELSEVIER SCIENCE SA}},
+Address = {{PO BOX 564, 1001 LAUSANNE, SWITZERLAND}},
+Type = {{Article}},
+Language = {{English}},
+Affiliation = {{Briottet, L (Reprint Author), CEA, LITEN, DTBH, LCTA, F-38054 Grenoble, France.
+   Moro, I.; Briottet, L.; Lemoine, P., CEA, LITEN, DTBH, LCTA, F-38054 Grenoble, France.
+   Andrieu, E.; Blanc, C.; Odemer, G., Univ Toulouse, CIRIMAT ENSIACET, UPS INPT CNRS, F-31432 Toulouse 4, France.}},
+DOI = {{10.1016/j.msea.2010.07.027}},
+ISSN = {{0921-5093}},
+Keywords = {{X80; Hydrogen embrittlement; HELP; HID; AIDE; Hydrogen diffusion}},
+Keywords-Plus = {{PLASTIC-DEFORMATION; TRANSPORT; DISLOCATIONS; LOCALIZATION; STRESS;
+   METALS; FLOW; CRACKING; IRON}},
+Research-Areas = {{Science \& Technology - Other Topics; Materials Science; Metallurgy \&
+   Metallurgical Engineering}},
+Web-of-Science-Categories  = {{Nanoscience \& Nanotechnology; Materials Science, Multidisciplinary;
+   Metallurgy \& Metallurgical Engineering}},
+Author-Email = {{isabelle.moro@cea.fr}},
+Author-Name = {{I.Moro}},
+Number-of-Cited-References = {{32}},
+Times-Cited = {{40}},
+Usage-Count-Last-180-days = {{3}},
+Usage-Count-Since-2013 = {{32}},
+Journal-ISO = {{Mater. Sci. Eng. A-Struct. Mater. Prop. Microstruct. Process.}},
+Doc-Delivery-Number = {{664XQ}},
+Unique-ID = {{ISI:000282997700015}},
+OA = {{No}},
+DA = {{2017-08-29}},
+Data={N/A}
++}
