--- a/data/2011.bib
+++ b/data/2011.bib
@@ -706,3 +706,139 @@ DA = {{2017-08-29}},
 Author-Name={Quan Wang},
 Data={N/A}
 }
+
+@article{ ISI:000289766200012,
+Author = {Ozbolt, Josko and Sharma, Akanshu and Reinhardt, Hans-Wolf},
+Title = {{Dynamic fracture of concrete - compact tension specimen}},
+Journal = {{INTERNATIONAL JOURNAL OF SOLIDS AND STRUCTURES}},
+Year = {{2011}},
+Volume = {{48}},
+Number = {{10}},
+Pages = {{1534-1543}},
+Month = {{MAY 15}},
+Abstract = {{The behavior of concrete structures is strongly influenced by the
+   loading rate. Compared to quasi-static loading concrete loaded by impact
+   loading acts in a different way. First, there is a strain-rate influence
+   on strength, stiffness, and ductility, and, second, there are inertia
+   forces activated. Both influences are clearly demonstrated in
+   experiments. Moreover, for concrete structures, which exhibit damage and
+   fracture phenomena, the failure mode and cracking pattern depend on
+   loading rate. In general, there is a tendency that with the increase of
+   loading rate the failure mode changes from mode-I to mixed mode.
+   Furthermore, theoretical and experimental investigations indicate that
+   after the crack reaches critical speed of propagation there is crack
+   branching. The present paper focuses on 3D finite-element study of the
+   crack propagation of the concrete compact tension specimen. The rate
+   sensitive microplane model is used as a constitutive law for concrete.
+   The strain-rate influence is captured by the activation energy theory.
+   Inertia forces are implicitly accounted for through dynamic finite
+   element analysis. The results of the study show that the fracture of the
+   specimen strongly depends on the loading rate. For relatively low
+   loading rates there is a single crack due to the mode-I fracture.
+   However, with the increase of loading rate crack branching is observed.
+   Up to certain threshold (critical) loading rate the maximal crack
+   velocity increases with increase of loading rate, however, for higher
+   loading rates maximal velocity of the crack propagation becomes
+   independent of the loading rate. The critical crack velocity at the
+   onset of crack branching is found to be approximately 500 m/s. (C) 2011
+   Elsevier Ltd. All rights reserved.}},
+Publisher = {{PERGAMON-ELSEVIER SCIENCE LTD}},
+Address = {{THE BOULEVARD, LANGFORD LANE, KIDLINGTON, OXFORD OX5 1GB, ENGLAND}},
+Type = {{Article}},
+Language = {{English}},
+Affiliation = {{Ozbolt, J (Reprint Author), Univ Stuttgart, Inst Construct Mat, D-70560 Stuttgart, Germany.
+   Ozbolt, Josko; Reinhardt, Hans-Wolf, Univ Stuttgart, Inst Construct Mat, D-70560 Stuttgart, Germany.
+   Sharma, Akanshu, Bhabha Atom Res Ctr, Reactor Safety Div, Bombay 400085, Maharashtra, India.}},
+DOI = {{10.1016/j.ijsolstr.2011.01.033}},
+ISSN = {{0020-7683}},
+Keywords = {{Concrete; Compact tension specimen; Dynamic fracture; Rate sensitivity;
+   Crack branching; Finite element analysis; Microplane model}},
+Keywords-Plus = {{MIXED-MODE FRACTURE; MICROPLANE MODEL; CRACK-PROPAGATION; STRAIN;
+   BEHAVIOR; EXTENSION; VELOCITY; RATES}},
+Research-Areas = {{Mechanics}},
+Web-of-Science-Categories  = {{Mechanics}},
+Author-Email = {{ozbolt@iwb.uni-stuttgart.de}},
+Author-Name={Josko Ozbolt},
+Data={N/A},
+Number-of-Cited-References = {{40}},
+Times-Cited = {{43}},
+Usage-Count-Last-180-days = {{2}},
+Usage-Count-Since-2013 = {{19}},
+Journal-ISO = {{Int. J. Solids Struct.}},
+Doc-Delivery-Number = {{753IT}},
+Unique-ID = {{ISI:000289766200012}},
+OA = {{No}},
+DA = {{2017-08-29}},
+}
+
+@article{ ISI:000279477200004,
+Author = {Shi, Xianming and Fay, Laura and Peterson, Marijean M. and Yang,
+   Zhengxian},
+Title = {{Freeze-thaw damage and chemical change of a portland cement concrete in
+   the presence of diluted deicers}},
+Journal = {{MATERIALS AND STRUCTURES}},
+Year = {{2010}},
+Volume = {{43}},
+Number = {{7}},
+Pages = {{933-946}},
+Month = {{AUG}},
+Abstract = {{The present study experimentally investigates the effect of different
+   diluted deicers on concrete deterioration. Laboratory simulations of
+   environmental freeze/thaw cycling were first conducted on Portland
+   cement concrete specimens in the presence of various deicers (NaCl,
+   K-formate, NaCl-based deicer, K-acetate-based deicer,
+   Na-acetate/Na-formate blend deicer, CMA deicer, or MgCl(2) liquid
+   deicer); and SEM/EDX measurements were then conducted for the concrete
+   samples. Under the experimental conditions in this study, the CMA solid
+   deicer and the MgCl(2) liquid deicer were benign to the concrete
+   durability, whereas K-formate and the Na-acetate/Na-formate blend deicer
+   showed moderate amount of weight loss and noticeable deterioration of
+   the concrete. NaCl, the NaCl-based deicer, and the K-acetate-based
+   deicer were the most deleterious to the concrete. In addition to
+   exacerbating physical distresses, each investigated chemical or diluted
+   deicer chemically reacted with some of the cement hydrates and formed
+   new products in the pores and cracks. Such physiochemical changes of the
+   cement paste induced by the deicers pose various levels of risks for the
+   concrete durability.}},
+Publisher = {{SPRINGER}},
+Address = {{VAN GODEWIJCKSTRAAT 30, 3311 GZ DORDRECHT, NETHERLANDS}},
+Type = {{Article}},
+Language = {{English}},
+Affiliation = {{Shi, XM (Reprint Author), Montana State Univ, Corros \& Sustainable Infrastruct Lab, Western Transportat Inst, Coll Engn, POB 174250, Bozeman, MT 59717 USA.
+   Shi, Xianming; Fay, Laura; Peterson, Marijean M.; Yang, Zhengxian, Montana State Univ, Corros \& Sustainable Infrastruct Lab, Western Transportat Inst, Coll Engn, Bozeman, MT 59717 USA.
+   Shi, Xianming, Montana State Univ, Dept Civil Engn, Bozeman, MT 59717 USA.}},
+DOI = {{10.1617/s11527-009-9557-0}},
+ISSN = {{1359-5997}},
+Keywords = {{Deicer; Portland cement concrete; SEM; EDX; Freeze-thaw}},
+Keywords-Plus = {{ALKALI-SILICA REACTION; MORTARS; CORROSION; EXPANSION; WATER}},
+Research-Areas = {{Construction \& Building Technology; Engineering; Materials Science}},
+Web-of-Science-Categories  = {{Construction \& Building Technology; Engineering, Civil; Materials
+   Science, Multidisciplinary}},
+Author-Email = {{xianming\_s@coe.montana.edu}},
+ Author-Name={Xianming Shi},
+ Data={N/A},
+ResearcherID-Numbers = {{Shi, Xianming/A-5108-2012
+   }},
+ORCID-Numbers = {{Shi, Xianming/0000-0003-3576-8952
+   Yang, Zhengxian/0000-0003-1703-4963}},
+Funding-Acknowledgement = {{Colorado Department of Transportation (CDOT); Research and Innovative
+   Technology Administration under the U.S. DOT; CDOT technical panel}},
+Funding-Text = {{The authors acknowledge the funding support by the Colorado Department
+   of Transportation (CDOT) and by the Research and Innovative Technology
+   Administration under the U.S. DOT. We also thank the CDOT Research Study
+   Managers Roberto de Dios and Patricia Martinek and the CDOT technical
+   panel for their support. We also extend our sincere appreciation to Dr.
+   Recep Avci of the Imaging and Chemical Analysis Laboratory at Montana
+   State University for the use of FESEM/EDX instrumentation and Mr. Doug
+   Cross of the Western Transportation Institute for his help with concrete
+   batching.}},
+Number-of-Cited-References = {{34}},
+Times-Cited = {{34}},
+Usage-Count-Last-180-days = {{2}},
+Usage-Count-Since-2013 = {{23}},
+Journal-ISO = {{Mater. Struct.}},
+Doc-Delivery-Number = {{620CS}},
+Unique-ID = {{ISI:000279477200004}},
+OA = {{No}},
+DA = {{2017-08-29}},
+}
