--- a/data/2012.bib
+++ b/data/2012.bib
@@ -761,3 +761,72 @@ DA = {{2017-08-29}},
 Author-Name={Arturo Garcia-Perez},
 Data={N/A}
 }
+
+@article{ ISI:000300648000005,
+Author = {Sause, M. G. R. and Mueller, T. and Horoschenkoff, A. and Horn, S.},
+Title = {{Quantification of failure mechanisms in mode-I loading of fiber
+   reinforced plastics utilizing acoustic emission analysis}},
+Journal = {{COMPOSITES SCIENCE AND TECHNOLOGY}},
+Year = {{2012}},
+Volume = {{72}},
+Number = {{2}},
+Pages = {{167-174}},
+Month = {{JAN 18}},
+Abstract = {{Acoustic emission signals originating from interlaminar crack
+   propagation in fiber reinforced composites were recorded during double
+   cantilever beam testing. The acoustic emission signals detected during
+   testing were analyzed by feature based pattern recognition techniques.
+   In previous studies it was demonstrated that the presented approach for
+   detection of distinct types of acoustic emission signals is suitable.
+   The subsequent correlation of distinct acoustic emission signal types to
+   microscopic failure mechanisms is based on two procedures. Firstly, the
+   frequency of occurrence of the distinct signal types is correlated to
+   different specimens' fracture surface microstructure. Secondly, a
+   comparison is made between experimental signals and signals resulting
+   from finite element simulations based on a validated model for
+   simulation of acoustic emission signals of typical failure mechanisms in
+   fiber reinforced plastics. A distinction is made between fiber breakage,
+   matrix cracking and interface failure. It is demonstrated, that the
+   feature values extracted from simulated signals coincide well with those
+   of experimental signals. As a result the applicability of the acoustic
+   emission signal classification method for analysis of failure in carbon
+   fiber and glass fiber reinforced plastics under mode-I loading
+   conditions has been demonstrated. The quantification of matrix cracking,
+   interfacial failure and fiber breakage was evaluated by interpretation
+   of the obtained distributions of acoustic emission signals types in
+   terms of fracture mechanics. The accumulated acoustic emission signal
+   amplitudes show strong correlation to the mechanical properties of the
+   specimens. Moreover, the changes in contribution to the different
+   failure types explain the observed variation in failure behavior of the
+   individual specimens quantitatively. (C) 2011 Elsevier Ltd. All rights
+   reserved.}},
+Publisher = {{ELSEVIER SCI LTD}},
+Address = {{THE BOULEVARD, LANGFORD LANE, KIDLINGTON, OXFORD OX5 1GB, OXON, ENGLAND}},
+Type = {{Article}},
+Language = {{English}},
+Affiliation = {{Sause, MGR (Reprint Author), Univ Augsburg, Inst Phys, D-86135 Augsburg, Germany.
+   Sause, M. G. R.; Horn, S., Univ Augsburg, Inst Phys, D-86135 Augsburg, Germany.
+   Mueller, T.; Horoschenkoff, A., Univ Appl Sci, Dept Mech Automot \& Aeronaut Engn, D-80335 Munich, Germany.}},
+DOI = {{10.1016/j.compscitech.2011.10.013}},
+ISSN = {{0266-3538}},
+EISSN = {{1879-1050}},
+Keywords = {{Acoustic emission; Polymer-matrix composites (PMCs); Fracture toughness;
+   Delamination; Damage mechanics}},
+Keywords-Plus = {{DAMAGE CHARACTERIZATION; VARIATIONAL APPROACH; PATTERN-RECOGNITION;
+   COMPOSITE-MATERIALS; IDENTIFICATION; MICROCRACKING; FRACTURE; SIGNALS;
+   MATRIX}},
+Research-Areas = {{Materials Science}},
+Web-of-Science-Categories  = {{Materials Science, Composites}},
+Author-Email = {{markus.sause@physik.uni-augsburg.de}},
+Author-Name = {{Markus Sause}},
+ResearcherID-Numbers = {{horn, siegfried/G-5152-2012}},
+Number-of-Cited-References = {{34}},
+Times-Cited = {{41}},
+Usage-Count-Last-180-days = {{4}},
+Usage-Count-Since-2013 = {{30}},
+Journal-ISO = {{Compos. Sci. Technol.}},
+Doc-Delivery-Number = {{897JW}},
+Unique-ID = {{ISI:000300648000005}},
+OA = {{No}},
+DA = {{2017-08-29}},
+}
