--- a/data/2006.bib
+++ b/data/2006.bib
@@ -665,3 +665,84 @@ DA = {{2017-08-29}},
 Author-Name={K. Wilde},
 Data={N/A}
 }
+
+
+@article{ ISI:000238708400009,
+Author = {Thurner, PJ and Wyss, P and Voide, R and Stauber, M and Stampanoni, M
+   and Sennhauser, U and Muller, R},
+Title = {{Time-lapsed investigation of three-dimensional failure and damage
+   accumulation in trabecular bone using synchrotron light}},
+Journal = {{BONE}},
+Year = {{2006}},
+Volume = {{39}},
+Number = {{2}},
+Pages = {{289-299}},
+Month = {{AUG}},
+Abstract = {{Synchrotron radiation micro-computed tomography (SR mu CT) is a very
+   useful technique when it comes to three-dimensional (3D) imaging of
+   complex internal and external geometries. Being a fully non-destructive
+   technique, SR mu CT can be combined with other experiments in situ for
+   functional imaging. We are especially interested in the combination of
+   SR mu CT with mechanical testing in order to gain new insights in the
+   failure mechanism of trabecular bone. This interest is motivated by the
+   immense costs in health care due to patients suffering from
+   osteoporosis, a systemic skeletal disease resulting in decreased bone
+   stability and increased fracture risk. To better investigate the
+   different failure mechanisms on the microlevel, we have developed a
+   novel in situ mechanical compression device, capable of exerting both
+   static and dynamic displacements on experimental samples. The device was
+   calibrated for mechanical testing using solid aluminum and bovine
+   trabecular bone samples. To study different failure mechanisms in
+   trabecular bone, we compared a fatigued and a non-fatigued bovine bone
+   sample with respect to failure initiation and propagation. The fatigued
+   sample failed in a burst-like fashion in contrast to the non-fatigued
+   sample, which exhibited a distinct localized failure band. Moreover,
+   microscopic cracks - microcracks and microfractures - were uncovered in
+   a 3D fashion illustrating the failure process in great detail. The
+   majority of these cracks were connected to a bone surface. The data also
+   showed that the classification of microcracks and -fractures from 2D
+   section can sometimes be ambiguous, which is also true for the
+   distinction of diffuse and distinct microdamage. Detailed investigation
+   of the failure mechanism in these samples illustrated that trabecular
+   bone often fails in delamination, providing a mechanism for energy
+   dissipation while conserving trabecular bone architecture. In the
+   future, this will allow an even better understanding of bone mechanics
+   related to its hierarchical structural organization. (c) 2006 Elsevier
+   Inc. All rights reserved.}},
+Publisher = {{ELSEVIER SCIENCE INC}},
+Address = {{360 PARK AVE SOUTH, NEW YORK, NY 10010-1710 USA}},
+Type = {{Article}},
+Language = {{English}},
+Affiliation = {{Muller, R (Reprint Author), Swiss Fed Inst Technol, ETH, Inst Biomed Engn, Moussonstr 18, CH-8044 Zurich, Switzerland.
+   Swiss Fed Inst Technol, ETH, Inst Biomed Engn, CH-8044 Zurich, Switzerland.
+   Univ Zurich, CH-8044 Zurich, Switzerland.
+   Swiss Fed Labs Mat Testing \& Res, EMPA, Elect Metrol Lab, CH-8600 Dubendorf, Switzerland.
+   Paul Scherrer Inst, SLS, CH-5232 Villigen, Switzerland.}},
+DOI = {{10.1016/j.bone.2006.01.147}},
+ISSN = {{8756-3282}},
+Keywords = {{synchrotron light micro-computed tomography; bone biomechanics;
+   image-guided failure assessment; microfracture; microdamage}},
+Keywords-Plus = {{X-RAY TOMOGRAPHY; HUMAN CORTICAL BONE; CANCELLOUS BONE; COMPUTED
+   MICROTOMOGRAPHY; MECHANICAL-PROPERTIES; FATIGUE BEHAVIOR;
+   PHASE-CONTRAST; COMPACT-BONE; MICRODAMAGE; RESOLUTION}},
+Research-Areas = {{Endocrinology \& Metabolism}},
+Web-of-Science-Categories  = {{Endocrinology \& Metabolism}},
+Author-Email = {{ralph.mueller@ethz.ch}},
+ResearcherID-Numbers = {{Muller, Ralph/A-1198-2008
+   Thurner, Philipp/A-3887-2012
+   Stampanoni, Marco/J-4099-2013
+   }},
+ORCID-Numbers = {{Muller, Ralph/0000-0002-5811-7725
+   Stampanoni, Marco/0000-0001-7486-6681
+   Thurner, Philipp/0000-0001-7588-9041
+   Stauber, Martin/0000-0003-4285-4146}},
+Number-of-Cited-References = {{53}},
+Times-Cited = {{71}},
+Usage-Count-Last-180-days = {{1}},
+Usage-Count-Since-2013 = {{11}},
+Journal-ISO = {{Bone}},
+Doc-Delivery-Number = {{059BN}},
+Unique-ID = {{ISI:000238708400009}},
+OA = {{No}},
+DA = {{2017-08-29}},
+}
